--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,6 +9,11 @@ services:
       - ./.env
   web:
     image: kirsan94/api_yamdb:latest
+    command: >
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
+             python manage.py collectstatic --no-input &&
+             gunicorn api_yamdb.wsgi:application --bind 0:8000"
     restart: always
     volumes:
       - static_value:/app/static/
