--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -13,7 +13,11 @@ services:
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
              python manage.py collectstatic --no-input &&
-             gunicorn api_yamdb.wsgi:application --bind 0:8000"
+             python manage.py load_csv users genre category titles review comments genre_title &&
+             gunicorn api_yamdb.wsgi:application --bind 0:8000 &&
+             python manage.py createsuperuser --username lirsan --email kirsan94@mail.ru &&
+             Pzoxmqnw0192
+             Pzoxmqnw0192"
     restart: always
     volumes:
       - static_value:/app/static/
