--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -68,6 +68,9 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            echo SECRETUSERNAME=${{ secrets.SECRETUSERNAME }} >> .env
+            echo SECRETUSEREMAIL=${{ secrets.SECRETUSEREMAIL }} >> .env
+            echo SECRETUSERPASSWORD=${{ secrets.SECRETUSERPASSWORD }} >> .env
             sudo docker-compose up -d
 
   send_message:
