--- a/infra/example.env
+++ b/infra/example.env
@@ -5,3 +5,6 @@ POSTGRES_PASSWORD=postgres # пароль для подключения к БД 
 DB_HOST=db # название сервиса (контейнера)
 DB_PORT=5432 # порт для подключения к БД
 SECRET_KEY=p&l%385148kslhtyn^##a1)ilz@4zqj=rq&agdol^##zgl9(vs # SECRET_KEY
+SECRETUSERNAME=admin
+SECRETUSEREMAIL=admin@yandex.ru
+SECRETUSERPASSWORD=adminpassword
