--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
-COPY ..requirements.txt /app
+COPY ../requirements.txt /app
 
 RUN python -m pip install --upgrade pip
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
