--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -48,6 +48,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     steps:
     - name: executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
@@ -68,8 +69,18 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
+            echo SECRETUSERNAME=${{ secrets.SECRETUSERNAME }} >> .env
+            echo SECRETUSEREMAIL=${{ secrets.SECRETUSEREMAIL }} >> .env
+            echo SECRETUSERPASSWORD=${{ secrets.SECRETUSERPASSWORD }} >> .env
             sudo docker-compose up -d
+            sudo docker exec -t -i lirsan_web_1 /bin/bash
+            python manage.py makemigrations
+            python manage.py migrate
+            python manage.py collectstatic --no-input
+            python manage.py load_csv users genre category titles review comments genre_title
+            python manage.py createsuperuser --username ${SECRETUSERNAME} --email ${SECRETUSEREMAIL}
+            ${SECRETUSERPASSWORD}
+            ${SECRETUSERPASSWORD}
 
   send_message:
     runs-on: ubuntu-latest
@@ -80,4 +91,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен!
+        message: Пуш ${{ github.workflow }} успешно выполнен!
